--- a/index.html
+++ b/index.html
@@ -11,36 +11,48 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- header -->
-    <header>
-      <a class="link logo logo-studio" href="index.html">
-        <span class="logo logo-web">web</span>studio
-      </a>
-      <nav>
-        <ul class="list">
-          <li><a class="link nav" href="index.html">Studio</a></li>
-          <li><a class="link nav" href="portfolio.html">Portfolio</a></li>
-          <li><a class="link nav" href="#">Contacts</a></li>
+    <header class="header-border">
+      <div class="container header">
+        <a class="link logo logo-studio" href="index.html">
+          <span class="logo logo-web">web</span>studio
+        </a>
+        <nav>
+          <ul class="list list-nav">
+            <li><a class="link nav" href="index.html">Studio</a></li>
+            <li><a class="link nav" href="portfolio.html">Portfolio</a></li>
+            <li><a class="link nav" href="#">Contacts</a></li>
+          </ul>
+        </nav>
+        <ul class="list list-contacts">
+          <li><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link contacts" href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
-      <ul class="list">
-        <li><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link contacts" href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
-      </ul>
+      </div>
     </header>
     <!-- main -->
     <main>
       <section class="hero-section">
-        <h1 class="hero-text">Effective Solutions for Your Business</h1>
+        <h1 class="hero-text">
+          Effective Solutions <br />
+          for Your Business
+        </h1>
         <button class="button hero-button" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Our advantages</h2>
-        <ul class="list">
+        <h2 class="header-section-hidden">Our advantages</h2>
+        <ul class="list section container">
           <li>
             <h3 class="item-heading">Strategy</h3>
             <p class="subscription">
@@ -72,48 +84,63 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul class="list">
-          <li><img src="./images/Rectangle 71.jpg" alt="monitor" width="360" /></li>
-          <li><img src="./images/Rectangle 71(1).jpg" alt="mobile" width="360" /></li>
-          <li><img src="./images/Rectangle 71(2).jpg" alt="laptop" width="360" /></li>
-        </ul>
+        <div class="container container-section-3">
+          <h2 class="header-section">What are we doing</h2>
+          <ul class="list section">
+            <li><img src="./images/Rectangle 71.jpg" alt="monitor" width="360" /></li>
+            <li><img src="./images/Rectangle 71(1).jpg" alt="mobile" width="360" /></li>
+            <li><img src="./images/Rectangle 71(2).jpg" alt="laptop" width="360" /></li>
+          </ul>
+        </div>
       </section>
       <section class="section-team">
-        <h2>Our Team</h2>
-        <ul class="list">
-          <li class="team-card">
-            <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="item-heading">Mark Guerrero</h3>
-            <p class="subscription">Product Designer</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/img(1).jpg" alt="Tom Ford" width="264" />
-            <h3 class="item-heading">Tom Ford</h3>
-            <p class="subscription">Frontend Developer</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/img(2).jpg" alt="Camila Garcia" width="264" />
-            <h3 class="item-heading">Camila Garcia</h3>
-            <p class="subscription">Marketing</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/img(3).jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="item-heading">Daniel Wilson</h3>
-            <p class="subscription">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container container-section-3">
+          <h2 class="header-section">Our Team</h2>
+          <ul class="list section">
+            <li class="team-card">
+              <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
+              <div class="team-subscription-item">
+                <h3 class="item-heading">Mark Guerrero</h3>
+                <p class="subscription">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img src="./images/img(1).jpg" alt="Tom Ford" width="264" />
+              <div class="team-subscription-item">
+                <h3 class="item-heading">Tom Ford</h3>
+                <p class="subscription">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img src="./images/img(2).jpg" alt="Camila Garcia" width="264" />
+              <div class="team-subscription-item">
+                <h3 class="item-heading">Camila Garcia</h3>
+                <p class="subscription">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img src="./images/img(3).jpg" alt="Daniel Wilson" width="264" />
+              <div class="team-subscription-item">
+                <h3 class="item-heading">Daniel Wilson</h3>
+                <p class="subscription">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a class="link logo logo-studio-footer" href="#">
-        <span class="logo logo-web">web</span>studio
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="container container-footer">
+        <a class="link logo logo-studio-footer" href="#">
+          <span class="logo logo-web">web</span>studio
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
