--- a/portfolio.html
+++ b/portfolio.html
@@ -56,63 +56,63 @@
         </ul>
         <div class="container">
           <ul class="list products-grid">
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img.jpg" alt="windows" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Banking App Interface Concept</h2>
                 <p class="subscription">App</p>
               </div>
             </li>
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img(1).jpg" alt="pay-by-phone" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Cashless Payment</h2>
                 <p class="subscription">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img(2).jpg" alt="devices" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Meditaion App</h2>
                 <p class="subscription">App</p>
               </div>
             </li>
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img(3).jpg" alt="auto" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Taxi Service</h2>
                 <p class="subscription">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img(4).jpg" alt="phone" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Screen Illustrations</h2>
                 <p class="subscription">Design</p>
               </div>
             </li>
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img(5).jpg" alt="girl" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Online Courses</h2>
                 <p class="subscription">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img(6).jpg" alt="magazin" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Instagram Stories Concept</h2>
                 <p class="subscription">Design</p>
               </div>
             </li>
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img(7).jpg" alt="food" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Organic Food</h2>
                 <p class="subscription">Web Site</p>
               </div>
             </li>
-            <li>
+            <li class="product-card">
               <img src="./images/portfolio/img(8).jpg" alt="cofee" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Fresh Coffee</h2>
