--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
         <ul class="list list-contacts">
           <li><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link contacts" href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a class="link contacts" href="tel:+11 (000) 111-11-11">+11(000)111-11-11</a></li>
         </ul>
       </div>
     </header>
@@ -87,9 +87,9 @@
         <div class="container container-section-3">
           <h2 class="header-section">What are we doing</h2>
           <ul class="list section">
-            <li><img src="./images/Rectangle 71.jpg" alt="monitor" width="360" /></li>
-            <li><img src="./images/Rectangle 71(1).jpg" alt="mobile" width="360" /></li>
-            <li><img src="./images/Rectangle 71(2).jpg" alt="laptop" width="360" /></li>
+            <li><img src="images/rectangle-71.jpg" alt="monitor" width="360" /></li>
+            <li><img src="images/rectangle-71(1).jpg" alt="mobile" width="360" /></li>
+            <li><img src="images/rectangle-71(2).jpg" alt="laptop" width="360" /></li>
           </ul>
         </div>
       </section>
@@ -98,28 +98,28 @@
           <h2 class="header-section">Our Team</h2>
           <ul class="list section">
             <li class="team-card">
-              <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
+              <img src="images/img.jpg" alt="Mark Guerrero" width="264" />
               <div class="team-subscription-item">
                 <h3 class="item-heading">Mark Guerrero</h3>
                 <p class="subscription">Product Designer</p>
               </div>
             </li>
             <li class="team-card">
-              <img src="./images/img(1).jpg" alt="Tom Ford" width="264" />
+              <img src="images/img(1).jpg" alt="Tom Ford" width="264" />
               <div class="team-subscription-item">
                 <h3 class="item-heading">Tom Ford</h3>
                 <p class="subscription">Frontend Developer</p>
               </div>
             </li>
             <li class="team-card">
-              <img src="./images/img(2).jpg" alt="Camila Garcia" width="264" />
+              <img src="images/img(2).jpg" alt="Camila Garcia" width="264" />
               <div class="team-subscription-item">
                 <h3 class="item-heading">Camila Garcia</h3>
                 <p class="subscription">Marketing</p>
               </div>
             </li>
             <li class="team-card">
-              <img src="./images/img(3).jpg" alt="Daniel Wilson" width="264" />
+              <img src="images/img(3).jpg" alt="Daniel Wilson" width="264" />
               <div class="team-subscription-item">
                 <h3 class="item-heading">Daniel Wilson</h3>
                 <p class="subscription">UI Designer</p>
