--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
         <ul class="list list-contacts">
           <li><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link contacts" href="tel:+11 (000) 111-11-11">+11(000)111-11-11</a></li>
+          <li><a class="link contacts" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </div>
     </header>
