--- a/portfolio.html
+++ b/portfolio.html
@@ -43,78 +43,88 @@
       </div>
     </header>
 
-
     <!-- main -->
     <main>
-      <section class="section-products">
-        <h1 class="header-section-hidden">Our products</h1>
-        <ul class="list container button-products">
-          <li><button class="button button-portfolio" type="button">All</button></li>
-          <li><button class="button button-portfolio" type="button">Web Site</button></li>
-          <li><button class="button button-portfolio" type="button">App</button></li>
-          <li><button class="button button-portfolio" type="button">Design</button></li>
-          <li><button class="button button-portfolio" type="button">Marketing</button></li>
-        </ul>
+      <section class="section section-products">
         <div class="container">
+          <h1 class="header-section-hidden">Our products</h1>
+          <ul class="list button-products">
+            <li class="button-portfolio-margin">
+              <button class="button button-portfolio" type="button">All</button>
+            </li>
+            <li class="button-portfolio-margin">
+              <button class="button button-portfolio" type="button">Web Site</button>
+            </li>
+            <li class="button-portfolio-margin">
+              <button class="button button-portfolio" type="button">App</button>
+            </li>
+            <li class="button-portfolio-margin">
+              <button class="button button-portfolio" type="button">Design</button>
+            </li>
+            <li class="button-portfolio-margin">
+              <button class="button button-portfolio" type="button">Marketing</button>
+            </li>
+          </ul>
+
           <ul class="list products-grid">
             <li class="product-card">
-              <img src="images/portfolio/img.jpg" alt="windows" width="360" />
+              <img class="img" src="images/portfolio/img.jpg" alt="windows" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Banking App Interface Concept</h2>
                 <p class="subscription">App</p>
               </div>
             </li>
             <li class="product-card">
-              <img src="images/portfolio/img(1).jpg" alt="pay-by-phone" width="360" />
+              <img class="img" src="images/portfolio/img(1).jpg" alt="pay-by-phone" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Cashless Payment</h2>
                 <p class="subscription">Marketing</p>
               </div>
             </li>
             <li class="product-card">
-              <img src="images/portfolio/img(2).jpg" alt="devices" width="360" />
+              <img class="img" src="images/portfolio/img(2).jpg" alt="devices" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Meditaion App</h2>
                 <p class="subscription">App</p>
               </div>
             </li>
             <li class="product-card">
-              <img src="images/portfolio/img(3).jpg" alt="auto" width="360" />
+              <img class="img" src="images/portfolio/img(3).jpg" alt="auto" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Taxi Service</h2>
                 <p class="subscription">Marketing</p>
               </div>
             </li>
             <li class="product-card">
-              <img src="images/portfolio/img(4).jpg" alt="phone" width="360" />
+              <img class="img" src="images/portfolio/img(4).jpg" alt="phone" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Screen Illustrations</h2>
                 <p class="subscription">Design</p>
               </div>
             </li>
             <li class="product-card">
-              <img src="images/portfolio/img(5).jpg" alt="girl" width="360" />
+              <img class="img" src="images/portfolio/img(5).jpg" alt="girl" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Online Courses</h2>
                 <p class="subscription">Marketing</p>
               </div>
             </li>
             <li class="product-card">
-              <img src="images/portfolio/img(6).jpg" alt="magazin" width="360" />
+              <img class="img" src="images/portfolio/img(6).jpg" alt="magazin" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Instagram Stories Concept</h2>
                 <p class="subscription">Design</p>
               </div>
             </li>
             <li class="product-card">
-              <img src="images/portfolio/img(7).jpg" alt="food" width="360" />
+              <img class="img" src="images/portfolio/img(7).jpg" alt="food" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Organic Food</h2>
                 <p class="subscription">Web Site</p>
               </div>
             </li>
             <li class="product-card">
-              <img src="images/portfolio/img(8).jpg" alt="cofee" width="360" />
+              <img class="img" src="images/portfolio/img(8).jpg" alt="cofee" width="360" />
               <div class="products-subscription">
                 <h2 class="item-heading">Fresh Coffee</h2>
                 <p class="subscription">Web Site</p>
@@ -130,11 +140,12 @@
         <a class="link logo logo-studio-footer" href="#">
           <span class="logo logo-web">web</span>studio
         </a>
-        <p class="footer-text">
-          Increase the flow of customers and <br />
-          sales for your business with digital <br />
-          marketing & growth solutions.
-        </p>
+        <div class="footer-subscription-container">
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
