--- a/index.html
+++ b/index.html
@@ -43,83 +43,84 @@
     </header>
     <!-- main -->
     <main>
-      <section class="hero-section">
-        <h1 class="hero-text">
-          Effective Solutions <br />
-          for Your Business
-        </h1>
+      <section class="section hero-section">
+        <div class="hero-text-container">
+          <h1 class="hero-text">Effective Solutions for Your Business</h1>
+        </div>
         <button class="button hero-button" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="section">
         <h2 class="header-section-hidden">Our advantages</h2>
-        <ul class="list section container">
-          <li>
-            <h3 class="item-heading">Strategy</h3>
-            <p class="subscription">
-              Our goal is to identify the business problem to walk away with the perfect and
-              creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="item-heading">Punctuality</h3>
-            <p class="subscription">
-              Bring the key message to the brand's audience for the best price within the shortest
-              possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="item-heading">Diligence</h3>
-            <p class="subscription">
-              Research and confirm brands that present the strongest digital growth opportunities
-              and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="item-heading">Technologies</h3>
-            <p class="subscription">
-              Design practice focused on digital experiences. We bring forth a deep passion for
-              problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list cards">
+            <li>
+              <h3 class="item-heading">Strategy</h3>
+              <p class="subscription">
+                Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="item-heading">Punctuality</h3>
+              <p class="subscription">
+                Bring the key message to the brand's audience for the best price within the shortest
+                possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="item-heading">Diligence</h3>
+              <p class="subscription">
+                Research and confirm brands that present the strongest digital growth opportunities
+                and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="item-heading">Technologies</h3>
+              <p class="subscription">
+                Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
+      <section class="section container-section-3">
         <div class="container container-section-3">
           <h2 class="header-section">What are we doing</h2>
-          <ul class="list section">
+          <ul class="list cards">
             <li><img src="images/rectangle-71.jpg" alt="monitor" width="360" /></li>
             <li><img src="images/rectangle-71(1).jpg" alt="mobile" width="360" /></li>
             <li><img src="images/rectangle-71(2).jpg" alt="laptop" width="360" /></li>
           </ul>
         </div>
       </section>
-      <section class="section-team">
+      <section class="section section-team">
         <div class="container container-section-3">
           <h2 class="header-section">Our Team</h2>
-          <ul class="list section">
+          <ul class="list cards">
             <li class="team-card">
-              <img src="images/img.jpg" alt="Mark Guerrero" width="264" />
+              <img class="img" src="images/img.jpg" alt="Mark Guerrero" width="264" />
               <div class="team-subscription-item">
                 <h3 class="item-heading">Mark Guerrero</h3>
                 <p class="subscription">Product Designer</p>
               </div>
             </li>
             <li class="team-card">
-              <img src="images/img(1).jpg" alt="Tom Ford" width="264" />
+              <img class="img" src="images/img(1).jpg" alt="Tom Ford" width="264" />
               <div class="team-subscription-item">
                 <h3 class="item-heading">Tom Ford</h3>
                 <p class="subscription">Frontend Developer</p>
               </div>
             </li>
             <li class="team-card">
-              <img src="images/img(2).jpg" alt="Camila Garcia" width="264" />
+              <img class="img" src="images/img(2).jpg" alt="Camila Garcia" width="264" />
               <div class="team-subscription-item">
                 <h3 class="item-heading">Camila Garcia</h3>
                 <p class="subscription">Marketing</p>
               </div>
             </li>
             <li class="team-card">
-              <img src="images/img(3).jpg" alt="Daniel Wilson" width="264" />
+              <img class="img" src="images/img(3).jpg" alt="Daniel Wilson" width="264" />
               <div class="team-subscription-item">
                 <h3 class="item-heading">Daniel Wilson</h3>
                 <p class="subscription">UI Designer</p>
@@ -135,11 +136,12 @@
         <a class="link logo logo-studio-footer" href="#">
           <span class="logo logo-web">web</span>studio
         </a>
-        <p class="footer-text">
-          Increase the flow of customers and <br />
-          sales for your business with digital <br />
-          marketing & growth solutions.
-        </p>
+        <div class="footer-subscription-container">
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
