--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
       <section class="section hero-section">
         <div class="hero-text-container">
-          <h1 class="hero-text">Effective Solutions for Your Business</h1>
+          <h1 class="hero-text">effective solutions for your business</h1>
         </div>
         <button class="button hero-button" type="button">Order Service</button>
       </section>
