--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a class="link nav" href="portfolio.html">Portfolio</a></li>
             <li><a class="link nav" href="#">Contacts</a></li>
           </ul>
-        </nav >
+        </nav>
         <ul class="list list-contacts">
           <li><a class="link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a class="link contacts" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -44,10 +44,12 @@
     <!-- main -->
     <main>
       <section class="section hero-section">
-        <div class="hero-text-container">
-          <h1 class="hero-text">effective solutions for your business</h1>
+        <div class="container">
+          <div class="hero-text-container">
+            <h1 class="hero-text">effective solutions for your business</h1>
+          </div>
+          <button class="button hero-button" type="button">Order Service</button>
         </div>
-        <button class="button hero-button" type="button">Order Service</button>
       </section>
       <section class="section">
         <h2 class="header-section-hidden">Our advantages</h2>
